<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">MobiMon</string>
  <string name="app_use_restricted">차량의 화면 사용 제한이 해제되면 다시 시도해 주세요.</string>
  <string name="app_use_paused">지금은 MobiMon 사용이 제한돼요</string>
  <string name="floating_service_notification_channel_name">홈 화면 캐릭터</string>
  <string name="floating_service_notification_title">MobiMon 홈 캐릭터</string>
  <string name="floating_service_notification_text">홈 화면에서 캐릭터가 함께하고 있어요.</string>
    <string name="drawer_las_name">라스</string>
  <string name="startup_meet_mobi">모비를 만나고 있어요</string>
  <string name="startup_meet_luna">루나를 만나고 있어요</string>
  <string name="startup_meet_las">라스를 만나고 있어요</string>
  <string name="startup_continue">홈으로 이동</string>
</resources>
